force-app/main/default/objects/Terminal__c/fields/Commodity_Type__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Type__c</fullName>
    <label>Commodity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>NGL</fullName>
            </value>
            <value>
                <fullName>Refined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>