force-app/main/default/objects/Terminal__c/fields/Rail_Truck_Marine_Access__c.field-meta.xml
<CustomField>
    <fullName>Rail_Truck_Marine_Access__c</fullName>
    <label>Rail Truck Marine Access</label>
    <type>Text</type>
    <length>255</length>
</CustomField>