force-app/main/default/objects/Terminal__c/fields/Storage_Capacity_bbls__c.field-meta.xml
<CustomField>
    <fullName>Storage_Capacity_bbls__c</fullName>
    <label>Storage Capacity bbls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>