force-app/main/default/objects/Terminal__c/fields/Tank_Count__c.field-meta.xml
<CustomField>
    <fullName>Tank_Count__c</fullName>
    <label>Tank Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>